updated customer form

--- a/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
+++ b/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
@@ -163,7 +163,7 @@
 
                    <form class="row g-3">
                        <div class="col-12">
-                           <label for="txtAddress" class="form-label">Customer Id</label>
+                           <label for="txtSearchCusId" class="form-label">Customer Id</label>
                            <input type="text" class="form-control" id="txtSearchCusId" placeholder="">
 
                        </div>
